[package]
name = "pi-dash"
authors = ["Michael Rivnak <rivnakm1@gmail.com>"]
repository = "https://github.com/mrivnak/pi-dash"
license-file = "../LICENSE"
version = "0.1.0"
edition = "2021"

[dependencies]
paho-mqtt = "0.10.0"
pretty_env_logger = "0.4"
rppal = "0.13.1"
tokio = { version = "1", features = ["full"] }
warp = "0.3.2"
