[package]
name = "pi-dash"
authors = ["Michael Rivnak <rivnakm1@gmail.com>"]
repository = "https://github.com/mrivnak/pi-dash"
license-file = "../LICENSE"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5.6"
dotenv = "0.9.0"
env_logger = "0.6"
futures = "0.1"
juniper = "0.13.1"
paho-mqtt = "0.10.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"